[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/ui_controller.gd" id="1"]
[ext_resource type="Script" path="res://game/scripts/ui/main_menu.gd" id="2"]
[ext_resource type="Script" path="res://game/scripts/ui/location_selection_screen.gd" id="3"]
[ext_resource type="Script" path="res://game/scripts/ui/challenge_screen.gd" id="4"]
[ext_resource type="Script" path="res://game/scripts/ui/game_over_screen.gd" id="5"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="NewGameButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "Новая игра"

[node name="ContinueButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "Продолжить"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "Выход"

[node name="LocationSelectionScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="LocationSelectionScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TitleLabel" type="Label" parent="LocationSelectionScreen/VBoxContainer"]
layout_mode = 2
text = "Выберите локацию"
horizontal_alignment = 1

[node name="LocationsContainer" type="HBoxContainer" parent="LocationSelectionScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BackButton" type="Button" parent="LocationSelectionScreen/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Назад"

[node name="ChallengeScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="ChallengeScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="LocationLabel" type="Label" parent="ChallengeScreen/VBoxContainer"]
layout_mode = 2
text = "Локация"

[node name="ChallengePanel" type="Panel" parent="ChallengeScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ChallengeScreen/VBoxContainer/ChallengePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="ChallengeTitle" type="Label" parent="ChallengeScreen/VBoxContainer/ChallengePanel/VBoxContainer"]
layout_mode = 2
text = "Испытание"

[node name="ChallengeDescription" type="RichTextLabel" parent="ChallengeScreen/VBoxContainer/ChallengePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Описание испытания"

[node name="ActionsPanel" type="Panel" parent="ChallengeScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ChallengeScreen/VBoxContainer/ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="ActionsContainer" type="VBoxContainer" parent="ChallengeScreen/VBoxContainer/ActionsPanel/VBoxContainer"]
layout_mode = 2

[node name="ResultPanel" type="Panel" parent="ChallengeScreen/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ResultLabel" type="Label" parent="ChallengeScreen/VBoxContainer/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Результат"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="ChallengeScreen/VBoxContainer/ResultPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
text = "Продолжить"

[node name="StatusBar" type="HBoxContainer" parent="ChallengeScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
alignment = 1

[node name="HealthLabel" type="Label" parent="ChallengeScreen/StatusBar"]
layout_mode = 2
text = "Здоровье: 3/3"

[node name="CoinsLabel" type="Label" parent="ChallengeScreen/StatusBar"]
layout_mode = 2
text = "Монеты: 5"

[node name="HorseLabel" type="Label" parent="ChallengeScreen/StatusBar"]
layout_mode = 2
text = "Конь: Есть"

[node name="ProgressLabel" type="Label" parent="ChallengeScreen/StatusBar"]
layout_mode = 2
text = "Прогресс: 0%"

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0

[node name="TitleLabel" type="Label" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "КОНЕЦ ИГРЫ"
horizontal_alignment = 1

[node name="MessageLabel" type="RichTextLabel" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Сообщение"

[node name="StatsPanel" type="Panel" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/VBoxContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="ButtonContainer" type="HBoxContainer" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="Button" parent="GameOverScreen/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "В меню"

[node name="RestartButton" type="Button" parent="GameOverScreen/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Начать заново"
